# UPennalizers

./: .gitignore  README  README.md  naoconnect.sh  opconnect.sh
Lib/: CMakeLists.txt  Makefile  Makefile.am  Makefile.inc  torchInstallGuide.txt
Lib/CM730/: Makefile  demo.h  demo.ld  rs485.c
Lib/Colortable/: LoadMatrix.m  Makefile  README  colorclass.m  colorsubsample.m  colortable.m  colortable_calc.m  colortable_init.m  colortable_merge.m  colortable_score.m  convert_logs.m  get_log_list.m  lut_montage.m  rgbmask.m
Lib/Firmware/CM700/Firmware/: Makefile  adc.c  ctable.h  dynamixel.h  main.c  main_relay.c  rs485.c  uart1.c
Lib/Firmware/CM700/Terminal/: CM-700.cm  README.txt  bootloader.lua  cm700_terminal.lua
Lib/Firmware/CM720/Terminal/: README.txt  bootloader.lua  cm_terminal.lua
Lib/Firmware/CM730/: demo.c  rs485.h
Lib/Firmware/Common/: ctable.h  dynamixel_instruction.cpp  dynamixel_instruction.h
Lib/Firmware/DynamixelGateway/Atmel/: Makefile  adc.c  attitudeFilter.c  attitudeFilter.h  config.h  main.c  rs485.c  timer0.c  timer0.h  timer1.c  timer1.h  timer4.c  timer4.h  timer5.c  uart.c  uart.h  uart0.c  uart1.c  uart1.h  uart2.c  uart2.h  uart3.c  uart3.h
Lib/Firmware/DynamixelGateway/Common/: ControlTable.h  DynamixelPacket.c  DynamixelPacket.h
Lib/Firmware/DynamixelGateway/Host/: DynamixelGateway.cc  DynamixelGateway.hh  DynamixelGateway2.cc  DynamixelGateway2.hh  Makefile  SerialDevice.cc  SerialDevice.hh  Timer.hh  getIMU.cc  getIMU2.cc  testDynamixelGateway.cc  testGateway.cc
Lib/Firmware/Firmware_Arduino/: Makefile  adc.c  attitudeFilter.h  config_arduino.h  main.c  main_old.c  main_relay.c  timer1.c  uart1.c
Lib/Firmware/Firmware_Seeeduino/: CBUF.h  Makefile  adc.c  adc.h  config.h  main.c  timer5.h  uart0.c  uart0.h
Lib/Firmware/rs485interruptcode/: Makefile  adc.c  adc.h  command.c  main.c  rs485.c  test.c  timer1.h  uart0.c  uart0.h
Lib/ImageProc/: ConnectRegions.cpp  Makefile  RadonTransform.cpp  RadonTransform.h  RegionProps.h  block_bitor.cpp  block_bitor.h  color_count.cpp  color_count.h  luaImageProc.cpp  luaImageProc.h  lua_color_stats.cpp  lua_color_stats.h  lua_field_lines.cpp  lua_field_spots.h  lua_goal_posts.cpp  lua_goal_posts.h
Lib/Lua/: README
Lib/Lua/src/: Android.mk  CMakeLists.txt  Makefile  Makefile.cmake
Lib/Modules/CMake/: FindWebots.cmake  cmake_uninstall.cmake.in  create_symlink.cmake
Lib/Modules/Comm/: CMakeLists.txt  Makefile  Makefile.local  luaComm.cpp
Lib/Modules/ImageProc/: CMakeLists.txt  CMakeLists.txt.Nao  ConnectRegions.cpp  ConnectRegions.h  ImageProc.lua  ImageProcFFI.lua  Makefile  Makefile.local  RadonTransform.cpp  RadonTransform.h  RegionProps.cpp  block_bitor.cpp  block_bitor.h  color_count.cpp  color_count.h  luaImageProc.cpp  lua_ImageProc.cpp.sav  lua_ImageProcFuncs.cpp  lua_ImageProcFuncs.h  lua_color_count.cpp  lua_color_count.h  lua_color_stats.cpp  lua_color_stats.h  lua_colorlut_gen.cpp  lua_colorlut_gen.h  lua_connect_regions.cpp  lua_connect_regions.h  lua_field_goals2.cpp  lua_field_lines.cpp  lua_field_lines.h  lua_field_occupancy.cpp  lua_field_occupancy.h  lua_field_spots.cpp  lua_goal_posts.cpp  lua_goal_posts.h  lua_goal_posts_white.cpp  lua_goal_posts_white.h  lua_robots.cpp  lua_robots.h  test_imageproc.lua
Lib/Modules/Util/: Makefile
Lib/Modules/Util/CArray/: CMakeLists.txt  Makefile  Makefile.local  lua_carray.cpp  luacarray.cpp  luacarray.h  test-carray.lua
Lib/Modules/Util/CUtil/: CMakeLists.txt  Makefile  Makefile.local  lua_cutil.cpp  lua_cutil.cpp.bak  luacutil.cpp  luacutil.h  ta2s.lua  test_cutil.lua
Lib/Modules/Velocity/: BallModel.cpp  BallModel.h  Gaussian2d.h  Makefile  bayesmodel.xml  boostmodel.xml  ddtreemodel.xml  ddtreemodel_dir.xml  luavelocityfilter.cpp  luavelocityfilter.h  mexBall.cpp  rtreemodel.xml  svmmodel.xml  test_prediction.lua  test_velocity.lua
Lib/Modules/Webots/: Makefile
Lib/Modules/bhwalk/: BHWalkProvider.cpp  BHWalkProvider.h  CMakeLists.txt  LICENCE.txt  Makefile  MotionSelector.cpp  MotionSelector.h  README  WalkingEngine.cpp  WalkingEngine.h  WalkingEngineKick.cpp  WalkingEngineKick.h  bhuman.h  lua_bhwalk.cpp  test_bhwalk.lua
Lib/Modules/lzmqFFI/: api.lua  error.lua  lzmqFFI.lua  threads.lua
Lib/Modules/xbox/: Makefile  lua_xbox360.cpp  test_360.lua
Lib/NaoQi/: CMakeLists.txt
Lib/NaoQi/src/: actuator_process.h  dcmprocess.cpp  lua.h  luaconf.h  luadcm.cpp  luafifo.h  sensor_process.h
Lib/NaoQi_v1.12/: CMakeLists.txt  Makefile  README.txt  qiproject.xml
Lib/NaoQi_v1.12/.qi/: qibuild.xml
Lib/NaoQi_v1.12/src/: actuator_process.cpp  actuator_process.h  dcmprocess.cpp  lauxlib.h  lua.hpp  luadcm.h  luafifo.cpp  lualib.h  sensor_process.cpp  sensor_process.h
Lib/Platform/Nao/: Makefile
Lib/Platform/NaoV4/: Makefile  test_led.py
Lib/Platform/OP/: Makefile
Lib/Platform/Webots/: Makefile
Lib/Platform/WebotsNao/: Makefile
Lib/Platform/WebotsOP/: Makefile  Supervisor.lua
Lib/Platform/Webots_OP/: Makefile  Supervisor.lua
Lib/Platform/XOS/: Makefile
Lib/Util/: Makefile
Lib/Util/CArray/: Makefile
Lib/Util/CUtil/: Makefile  luacutil.cpp
Lib/Util/Matlab/: Debug.m  Logger.m  Logger2.m  Makefile  Makefile.save  MonitorGeneral.m  MonitorNet.m  MonitorShm.m  MonitorShm2.m  MonitorShmImg.m  MonitorShm_General.m  MonitorTeam.m  MonitorTeamShm.m  README.txt  colormap2rgb.m  construct_array.m  fix_serialize.m  gen_log.m  log_images.m  lua2mat.m  luaarrstruct2mat.m  mexshm.cpp  monitor.m  monitorComm.cc  monitorComm.cc.old  naoComm.cc  naoCommWired.cc  plot_ball.m  plot_field.m  plot_goalposts.m  plot_localization.m  plot_robot.m  plot_robot_color.m  plot_robot_struct.m  plot_surroundings.m  plot_team_struct.m  plot_vision.m  plot_vision2.m  plot_vision3.m  raw2label.m  (+6 more)
Lib/Util/PyQt/: howto.txt  run_viewer.py  setup.py  vcm.cpp  viewer.py  viewer.ui
Lib/Util/Python/: Makefile  libMonitor.cc  libMonitor.h  libMonitor.i  monitor.py  pyshm.cpp  test_image.py  test_image_mac.py
Lib/Util/Shm/: Makefile  README.txt  luashm.cpp
Lib/Util/Unix/: Makefile  getch.c  luastty.cpp  luaunix.c  luaunix.h
(+1857 files in other folders)
